Update project structure, add roadmap features, agent services, and update gitignore